k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  namespace: headscale
  labels:
    app.kubernetes.io/name: headscale
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: headscale
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: ui
      port: 80
      targetPort: 80
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: 9090
      protocol: TCP
    - name: grpc
      port: 50443
      targetPort: 50443
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: headscale-stun-lb
  namespace: headscale
  labels:
    app.kubernetes.io/name: headscale
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: headscale
  ports:
    # STUN & NAT traversal on port 3478 UDP (forward external router port 53 -> 3478 to avoid hijacking node internal DNS)
    - name: stun
      port: 3478
      targetPort: 3478
      protocol: UDP
